welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:3: error: illegal start of simple expression
  if(vuBiscuit(=)false){
               ^Program:12: error: ')' expected but '}' found.
}
^