welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
  if(vuBiscuit(=)false){
  	avance();
  	avance();
  	avance();
  	avance();
  	avance();
  	avance();
  	return true; 	
  }   
}
